--- a/main.ipynb
+++ b/main.ipynb
@@ -666,8 +666,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming you have the top_k_doc list containing the top courses\n",
-    "\n",
     "# List to hold course details\n",
     "courses_top_k = []\n",
     "\n",
@@ -677,14 +675,7 @@
     "    university_name = doc['universityName']\n",
     "    description = doc['description']\n",
     "    url = doc['URL']\n",
-    "    # Assuming latitude and longitude are also available in doc\n",
-    "    latitude = doc.get('latitude', '')  # Replace with actual latitude key if available\n",
-    "    longitude = doc.get('longitude', '')  # Replace with actual longitude key if available\n",
-    "    \n",
-    "    # Assuming you have a function to fetch fees based on course or university\n",
-    "    # Replace fetch_fees() with your appropriate fee retrieval method\n",
-    "    #fees = fetch_fees(course_name, university_name)\n",
-    "    \n",
+    "\n",
     "    # Create a dictionary containing course details\n",
     "    course_info = {\n",
     "        'Course Name': course_name,\n",
@@ -697,10 +688,7 @@
     "    }\n",
     "    \n",
     "    # Append course details to the list\n",
-    "    courses_top_k.append(course_info)\n",
-    "\n",
-    "# Now, courses_top_k contains details of the top courses from top_k_doc\n",
-    "# You can utilize or display this information as needed\n"
+    "    courses_top_k.append(course_info)\n"
    ]
   },
   {
@@ -827,14 +815,6 @@
     "# Define colors and default color.\n",
     "colors = {'<1k': 'blue', '1k-10k': 'green', '10k-100k': 'orange', '100k-1M': 'red', '>1M': 'purple'}\n",
     "default_color = 'gray'  # Default color for values NaN\n",
-    "\n",
-    "# Iterate through the DataFrame and add markers to the cluster\n",
-    "#for index, row in courses.iterrows():\n",
-    "    #fee_interval = row['fees_interval'] if not pd.isna(row['fees_interval']) else None\n",
-    "    #color = colors.get(fee_interval, default_color)\n",
-    "\n",
-    "    # Add the marker to the cluster with the appropriate color, and the course name as a label.\n",
-    "    #folium.Marker([row['Lat'], row['Lon']], popup=row['Full_Address'], icon=folium.Icon(color=color), tooltip=row['courseName']).add_to(marker_cluster)\n",
     "\n",
     "# Add legend\n",
     "legend_html = '''\n",
