Added CLQ and AQ

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,6 +29,12 @@
     "            <td>2085698</td>\n",
     "            <td>leibrant.2085698@studenti.uniroma1.it</td>\n",
     "        </tr>\n",
+    "        <tr>\n",
+    "            <td>Tim Ragno</td>\n",
+    "            <td>griimish</td>\n",
+    "            <td>2116901</td>\n",
+    "            <td>ragno.2116901@studenti.uniroma1.it</td>\n",
+    "        </tr>\n",
     "    </table>\n",
     "</div>"
    ]
@@ -1694,19 +1700,278 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e36ede3",
+   "cell_type": "markdown",
+   "id": "341bf175",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 6. Command Line Question (CLQ)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9397a4e",
+   "metadata": {},
+   "source": [
+    "As done in the previous assignment, we encourage using the command as a feature that Data Scientists must master.\n",
+    "\n",
+    "Note: To answer the question in this section, you must strictly use command line tools. We will reject any other method of response. The final script must be placed in CommandLine.sh.\n",
+    "\n",
+    "First, take the course_i.tsv files you created in point 1 and merge them using Linux commands (Hint: make sure that the first row containing the column names appears only once).\n",
+    "\n",
+    "Now that you have your merged file named merged_courses.tsv, use Linux commands to answer the following questions:\n",
+    "\n",
+    "    Which country offers the most Master's Degrees? Which city?\n",
+    "    How many colleges offer Part-Time education?\n",
+    "    Print the percentage of courses in Engineering (the word \"Engineer\" is contained in the course's name).\n",
+    "\n",
+    "Important note: You may work on this question in any environment (AWS, your PC command line, Jupyter notebook, etc.), but the final script must be placed in CommandLine.sh, which must be executable. Please run the script and include a screenshot of the output in the notebook for evaluation.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "The first step before manipulating the bash files is to combine the tsv files into one. This can be done in the command line in the *courses* folder with all these files using these commands :"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "1007235d",
+   "metadata": {},
+   "source": [
+    "# Take the header from the first file (because we know that each file has the same set of columns)\n",
+    "head -n 1 course_1.tsv > merged_courses.tsv\n",
+    "\n",
+    "# Loop through all TSV files (except for the merged file) and append their contents (minus the header) to the merged file\n",
+    "for file in *.tsv; do\n",
+    "   if [ \"$file\" != \"merged_courses.tsv\" ]; then\n",
+    "      tail -n +2 \"$file\" >> merged_courses.tsv\n",
+    "   fi\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f870d699",
+   "metadata": {},
+   "source": [
+    "Now that we have the merged file, we can use bash operations to obtain the results we want. This was done using the built-in bash functions (like awk, sort, head...) but we could've done it using a specialized library (like the one created by ebay)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dca0a32f",
+   "metadata": {},
+   "source": [
+    "![alternative text](cmd.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdaba29f",
+   "metadata": {},
+   "source": [
+    "The results seem to make sense. The first two make sense when combined and if we consider that the UK has most of the Master's degrees (MSc) in the dataset, the number of colleges offering Part Time education (which is rarer than full time) is proportionate. The percentage of Engineering courses is also realistic (~ 10% seems about right for universities around the globe)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51e5871b",
+   "metadata": {},
+   "source": [
+    "## 7. Algorithmic Question (AQ)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94ac2139",
+   "metadata": {},
+   "source": [
+    "1. I first started by converting the min, max intervals for each day into an array of all integers from the min to the max. Next, the \"naive\" algorithm to answer this problem would be to iterate through each combinations of elements of each list. This is of course completely inefficient. \n",
+    "However, one can reframe the problem in another way : all possible sum of elements can be thought of as the leaves of a tree where each node represents a decision point of a given list. Thus, the problem can be reframed as a specific case of the DFS problem, a common algorithmic search problem in trees. The goal here is to find the path that gives us the target number when summing all the node values of such path. \n",
+    "\n",
+    "Note that this is my first interpretation of the problem and will be improved in the future questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "53e753b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please input two space-separated integers2 5\n",
+      "0 1\n",
+      "3 5\n",
+      "YES\n",
+      "0 5\n",
+      "1 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_days, n_hours = map(int, input(\"Please input two space-separated integers\").split())\n",
+    "days = [[]]\n",
+    "\n",
+    "for i in range(n_days):\n",
+    "    prompt = input().split()\n",
+    "    min, max = int(prompt[0]), int(prompt[1])\n",
+    "    days.append(list(range(min,max+1)))\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "def search(idx, path, val, target):\n",
+    "    global is_first\n",
+    "    \n",
+    "    # We reached a leaf\n",
+    "    if idx + 1 == len(days):\n",
+    "        if val == target:\n",
+    "            return(path)\n",
+    "        return \n",
+    "\n",
+    "    # Pruning step, if we have already reach a sum value bigger than the target, we stop\n",
+    "    if val > target:\n",
+    "        return \n",
+    "    \n",
+    "    # Recursive step\n",
+    "    for child in days[idx+1]: \n",
+    "        res = search(idx + 1, path + [child], val + child, target)\n",
+    "        # If the recursive pass returns something\n",
+    "        if res:\n",
+    "            # If this was the first path, return yes beforehand\n",
+    "            if is_first:\n",
+    "                print(\"YES\")\n",
+    "                is_first = False\n",
+    "            print(*res)\n",
+    "            \n",
+    "    \n",
+    "\n",
+    "def target_search(target):\n",
+    "    # Using a global function is \"bad practise\" in most cases, however, with the complexity of the recursive function, \n",
+    "    # i chose to play it safe\n",
+    "    global is_first\n",
+    "    is_first = True\n",
+    "    search(0, [], 0, target)\n",
+    "    \n",
+    "    if is_first == True:\n",
+    "        print(\"NO\")\n",
+    "    \n",
+    "        \n",
+    "    \n",
+    "target_search(n_hours)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc665e76",
+   "metadata": {},
+   "source": [
+    "2. For this case, the average time complexity is somewhat tricky to compute because of the pruning done to remove branches where the target value is surpassed. However, we can compute that, in the worst case scenario, the complexity will be $O(b^d)$ where b is the branching factor in tree-like problems, it refers to the number of children of a node (here, the size of the interval between min and maxhours in a day) and d is the depth (maximum size of a path in the graph). This is because, in the worst case, no pruning is done and thus all possible paths are explored. In this case, for each level of the tree, we have to explore $b^{level}$ nodes if b is uniform. \n",
+    "Thus, we have to compute $$\\sum_{i=1}^{d} b^i = b \\sum_{i=0}^{d-1} b^{i} = b\\frac{1 - b^{d}}{1 - d}$$ Using the Big O notation, we can surmise that this equates to $O(b^d)$ in the worst case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40356f3a",
+   "metadata": {},
+   "source": [
+    "3. When asking the LLM (in my case, ChatGPT), the algorithm gives the same answer for the worst case scenario (which is not surprising as it is a very common result in algorithm theory) but gives an answer for the average case : $O(b_{avg} ^ {d_{avg}})$. However, the average case is not really useful for this case and serves only as an interesting mathematical tidbit.\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5935c4ff",
+   "metadata": {},
+   "source": [
+    "4. This code is definitely not optimal, the problem in the tree is that each path is at least considered (before being pruned if it meets the requirement for it). For each level, we reach different values, the problem is that if two values are identical on a level, we compute each subsequent value starting from them twice.\n",
+    "\n",
+    "To prevent that, we can update the sums value at each level and remove the duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "58483385",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please input two space-separated integers2 5\n",
+      "0 1\n",
+      "3 5\n",
+      "YES\n",
+      "1 4\n",
+      "0 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_days, n_hours = map(int, input(\"Please input two space-separated integers\").split())\n",
+    "days = []\n",
+    "\n",
+    "for i in range(n_days):\n",
+    "    prompt = input().split()\n",
+    "    min, max = int(prompt[0]), int(prompt[1])\n",
+    "    days.append(list(range(min,max+1)))\n",
+    "\n",
+    "    \n",
+    "def search_iter(target):\n",
+    "    # We initialise the sum,path dictionary \n",
+    "    sum_dict = {0 : [[]]} \n",
+    "    for day in days:\n",
+    "        # We create a new dictionary of all the sums at the end of the current level with the paths leading to those \n",
+    "        # sum values\n",
+    "        dict_level = {}\n",
+    "        for elem in day:\n",
+    "            for sum_elem in sum_dict:\n",
+    "                new_sum = sum_elem + elem\n",
+    "                # \"Pruning\" on the impossible paths\n",
+    "                if new_sum <= target :\n",
+    "                    if new_sum not in dict_level:\n",
+    "                        dict_level[new_sum] = []\n",
+    "                    # Add the current element to the path leading to the new_sum. This doesn't work if new_sum\n",
+    "                    # is not in the dictionnary, hence the previous condition\n",
+    "                    for path in sum_dict[sum_elem]:\n",
+    "                        dict_level[new_sum].append(path + [elem])\n",
+    "        \n",
+    "        \n",
+    "        sum_dict = dict_level\n",
+    "        \n",
+    "    return sum_dict\n",
+    "    \n",
+    "        \n",
+    "        \n",
+    "dict_paths = search_iter(n_hours)\n",
+    "\n",
+    "if n_hours in dict_paths:\n",
+    "    print(\"YES\")\n",
+    "    for lst in dict_paths[n_hours]:\n",
+    "        print(*lst)\n",
+    "else:\n",
+    "    print(\"NO\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9533c45d",
+   "metadata": {},
+   "source": [
+    "Let's analyse the time complexity of this, in the worst case (as the pruning makes computations complicated, we'll still work on the worst case), the sum is computed between each element of a given list but since each sum number is a POSITIVE integer and since there are no duplicates in the dictionary of sums, the number of operations for a given number is capped at the total number of hours. Hence we get : $O(d*b*n_{hours})$ at worst as $b$ (max number of elements in an array) * $n_{hours}$ (total number of operations) sums in a given day is the maximum and there are $d$ days"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3.11",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3.11"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1718,7 +1983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
