--- a/main.ipynb
+++ b/main.ipynb
@@ -1529,6 +1529,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a9b7dfde",
+   "metadata": {},
+   "source": [
+    "In the example the new score function is not better than the similarity score. The difference of these two are that the similarity score is only based in the terms in the `description` while the new one gives different weight to each criteria, so it could be that the relevance of certain criteria may vary based on the context or domain. For example, city might be more critical in certain cases, while in others, the course description might carry more weight. The similarity score might excel in certain contexts, while the new scoring function could perform better in others. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "edb61e8e",
    "metadata": {},
    "source": [
@@ -1983,7 +1991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
